parser/y.output

state 0
	$accept: .QUERIES $end 
	WHERE_CONDITION: .    (18)

	SELECT  shift 4
	WHERE  shift 6
	.  reduce 18 (src line 141)

	QUERIES  goto 1
	STATEMENT  goto 2
	SELECT_STATEMENT  goto 3
	WHERE_CONDITION  goto 5

state 1
	$accept:  QUERIES.$end 

	$end  accept
	.  error


state 2
	QUERIES:  STATEMENT.    (1)

	.  reduce 1 (src line 63)


state 3
	STATEMENT:  SELECT_STATEMENT.    (2)

	.  reduce 2 (src line 67)


state 4
	SELECT_STATEMENT:  SELECT.FIELDS FROM SOURCE WHERE_CONDITION 
	SELECT_STATEMENT:  SELECT.FIELDS WHERE_CONDITION 

	STAR  shift 9
	NAME  shift 10
	INTEGER  shift 13
	FLOAT  shift 12
	STRING  shift 11
	.  error

	FIELD  goto 8
	FIELDS  goto 7

state 5
	SELECT_STATEMENT:  WHERE_CONDITION.    (5)

	.  reduce 5 (src line 88)


state 6
	WHERE_CONDITION:  WHERE.CONDITION 

	LEFTC  shift 15
	NAME  shift 17
	INTEGER  shift 19
	FLOAT  shift 20
	STRING  shift 18
	.  error

	CONDITION  goto 14
	CONDITION_VAR  goto 16

state 7
	SELECT_STATEMENT:  SELECT FIELDS.FROM SOURCE WHERE_CONDITION 
	SELECT_STATEMENT:  SELECT FIELDS.WHERE_CONDITION 
	WHERE_CONDITION: .    (18)

	FROM  shift 21
	WHERE  shift 6
	.  reduce 18 (src line 141)

	WHERE_CONDITION  goto 22

state 8
	FIELDS:  FIELD.    (6)
	FIELDS:  FIELD.COMMA FIELDS 

	COMMA  shift 23
	.  reduce 6 (src line 98)


state 9
	FIELD:  STAR.    (8)

	.  reduce 8 (src line 106)


state 10
	FIELD:  NAME.ALIAS 
	ALIAS: .    (13)

	AS  shift 25
	.  reduce 13 (src line 122)

	ALIAS  goto 24

state 11
	FIELD:  STRING.ALIAS 
	ALIAS: .    (13)

	AS  shift 25
	.  reduce 13 (src line 122)

	ALIAS  goto 26

state 12
	FIELD:  FLOAT.ALIAS 
	ALIAS: .    (13)

	AS  shift 25
	.  reduce 13 (src line 122)

	ALIAS  goto 27

state 13
	FIELD:  INTEGER.ALIAS 
	ALIAS: .    (13)

	AS  shift 25
	.  reduce 13 (src line 122)

	ALIAS  goto 28

state 14
	WHERE_CONDITION:  WHERE CONDITION.    (17)
	CONDITION:  CONDITION.AND CONDITION 
	CONDITION:  CONDITION.OR CONDITION 

	OR  shift 30
	AND  shift 29
	.  reduce 17 (src line 138)


state 15
	CONDITION:  LEFTC.CONDITION RIGHTC 

	LEFTC  shift 15
	NAME  shift 17
	INTEGER  shift 19
	FLOAT  shift 20
	STRING  shift 18
	.  error

	CONDITION  goto 31
	CONDITION_VAR  goto 16

state 16
	CONDITION:  CONDITION_VAR.OPERATOR CONDITION_VAR 

	EQ  shift 33
	NEQ  shift 34
	LT  shift 35
	LTE  shift 36
	GT  shift 37
	GTE  shift 38
	TLIKE  shift 39
	.  error

	OPERATOR  goto 32

state 17
	CONDITION_VAR:  NAME.    (30)

	.  reduce 30 (src line 183)


state 18
	CONDITION_VAR:  STRING.    (31)

	.  reduce 31 (src line 186)


state 19
	CONDITION_VAR:  INTEGER.    (32)

	.  reduce 32 (src line 189)


state 20
	CONDITION_VAR:  FLOAT.    (33)

	.  reduce 33 (src line 192)


state 21
	SELECT_STATEMENT:  SELECT FIELDS FROM.SOURCE WHERE_CONDITION 

	NAME  shift 41
	STRING  shift 42
	.  error

	SOURCE  goto 40

state 22
	SELECT_STATEMENT:  SELECT FIELDS WHERE_CONDITION.    (4)

	.  reduce 4 (src line 80)


state 23
	FIELDS:  FIELD COMMA.FIELDS 

	STAR  shift 9
	NAME  shift 10
	INTEGER  shift 13
	FLOAT  shift 12
	STRING  shift 11
	.  error

	FIELD  goto 8
	FIELDS  goto 43

state 24
	FIELD:  NAME ALIAS.    (9)

	.  reduce 9 (src line 109)


state 25
	ALIAS:  AS.NAME 

	NAME  shift 44
	.  error


state 26
	FIELD:  STRING ALIAS.    (10)

	.  reduce 10 (src line 112)


state 27
	FIELD:  FLOAT ALIAS.    (11)

	.  reduce 11 (src line 115)


state 28
	FIELD:  INTEGER ALIAS.    (12)

	.  reduce 12 (src line 118)


state 29
	CONDITION:  CONDITION AND.CONDITION 

	LEFTC  shift 15
	NAME  shift 17
	INTEGER  shift 19
	FLOAT  shift 20
	STRING  shift 18
	.  error

	CONDITION  goto 45
	CONDITION_VAR  goto 16

state 30
	CONDITION:  CONDITION OR.CONDITION 

	LEFTC  shift 15
	NAME  shift 17
	INTEGER  shift 19
	FLOAT  shift 20
	STRING  shift 18
	.  error

	CONDITION  goto 46
	CONDITION_VAR  goto 16

state 31
	CONDITION:  LEFTC CONDITION.RIGHTC 
	CONDITION:  CONDITION.AND CONDITION 
	CONDITION:  CONDITION.OR CONDITION 

	RIGHTC  shift 47
	OR  shift 30
	AND  shift 29
	.  error


state 32
	CONDITION:  CONDITION_VAR OPERATOR.CONDITION_VAR 

	NAME  shift 17
	INTEGER  shift 19
	FLOAT  shift 20
	STRING  shift 18
	.  error

	CONDITION_VAR  goto 48

state 33
	OPERATOR:  EQ.    (23)

	.  reduce 23 (src line 160)


state 34
	OPERATOR:  NEQ.    (24)

	.  reduce 24 (src line 163)


state 35
	OPERATOR:  LT.    (25)

	.  reduce 25 (src line 166)


state 36
	OPERATOR:  LTE.    (26)

	.  reduce 26 (src line 169)


state 37
	OPERATOR:  GT.    (27)

	.  reduce 27 (src line 172)


state 38
	OPERATOR:  GTE.    (28)

	.  reduce 28 (src line 175)


state 39
	OPERATOR:  TLIKE.    (29)

	.  reduce 29 (src line 178)


state 40
	SELECT_STATEMENT:  SELECT FIELDS FROM SOURCE.WHERE_CONDITION 
	WHERE_CONDITION: .    (18)

	WHERE  shift 6
	.  reduce 18 (src line 141)

	WHERE_CONDITION  goto 49

state 41
	SOURCE:  NAME.    (15)

	.  reduce 15 (src line 130)


state 42
	SOURCE:  STRING.    (16)

	.  reduce 16 (src line 133)


state 43
	FIELDS:  FIELD COMMA FIELDS.    (7)

	.  reduce 7 (src line 101)


state 44
	ALIAS:  AS NAME.    (14)

	.  reduce 14 (src line 125)


state 45
	CONDITION:  CONDITION.AND CONDITION 
	CONDITION:  CONDITION AND CONDITION.    (21)
	CONDITION:  CONDITION.OR CONDITION 

	.  reduce 21 (src line 152)


state 46
	CONDITION:  CONDITION.AND CONDITION 
	CONDITION:  CONDITION.OR CONDITION 
	CONDITION:  CONDITION OR CONDITION.    (22)

	AND  shift 29
	.  reduce 22 (src line 155)


state 47
	CONDITION:  LEFTC CONDITION RIGHTC.    (19)

	.  reduce 19 (src line 146)


state 48
	CONDITION:  CONDITION_VAR OPERATOR CONDITION_VAR.    (20)

	.  reduce 20 (src line 149)


state 49
	SELECT_STATEMENT:  SELECT FIELDS FROM SOURCE WHERE_CONDITION.    (3)

	.  reduce 3 (src line 72)


30 terminals, 12 nonterminals
34 grammar rules, 50/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
61 working sets used
memory: parser 24/240000
11 extra closures
60 shift entries, 1 exceptions
21 goto entries
4 entries saved by goto default
Optimizer space used: output 58/240000
58 table entries, 0 zero
maximum spread: 25, maximum offset: 40
